deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ronak-deployment
  namespace: ronak-app 
  labels:
    app: ronak-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ronak-app
  template:
    metadata:
      labels:
        app: ronak-app
    spec:
      containers:
      - name: ronak-container
        image: palronaq/ronak_img:3.0
        ports:
        - containerPort: 8000
