service-1.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: ronak-service
#   namespace: ronak-app
# spec:
#   selector:
#     app: ronak-app
#   type: NodePort
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 8000
#       nodePort: 30100
  
apiVersion: v1
kind: Service
metadata:
  name: ronak-service
  namespace: ronak-app
spec:
  type: NodePort
  selector:
    app: ronak-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  # type: ClusterIP
