ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: ronak-app 
  labels:
    app: ronak-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ronaq-apps.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ronak-service
              port:
                number: 80


      # - path: /home
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: ronak-service2
      #       port:
      #         number: 8000

      # - path: /path1
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: ronak-service
      #       port:
      #         number: 8000

      # - path: /path2
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: ronak-service
      #       port:
      #         number: 8000
